# $Id: Changes,v 1.5 2003/06/19 14:53:44 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.46
	[ENHANCEMENTS]
	* The uri() will only be the URI of the requested page if it worked.
	* Oh yes, I forgot to mention: We're on Sourceforge now.

0.45	June 11, 2003
	[ENHANCEMENTS]
	* Added response() method, which is identical to res().
	* Added a convenience method success(), which is just a wrapper
	  around $agent->res->is_success().
	* Passes along a Referer: header.  It can still be overridden
	  with the %Headers hash, though.  Thanks, Corion.
	* We now have a set of localized tests that run for machines that
	  aren't connected to the Net.  There's now a t/lib/ directory for
	  those helper files, and the previous Utils.pm has been dropped.
	  Again, Corion to the rescue.

	[DOCUMENTATION]
	* Added to the FAQ
	* Rearranged all the functions in the file so they are now
	  logically grouped.

0.44	June 5, 2003
	[ENHANCEMENTS]
	* Now follows redirects after a POST.  By default, LWP::UserAgent
	  does NOT follow redirects after a POST.  This matches the
	  official RFC.  However, since WWW::Mechanize is meant to be a
	  browser clone, and browsers follow the redirects after a POST,
	  I've changed this behavior.  If this causes bummers, let me
	  know and maybe I'll throw in a switch.
	  
	[DOCUMENTATION]
	* The package now includes the WWW::Mechanize logo in the etc/
	  directory.  I have no idea what I'll do with it, but thanks
	  to Mengwong for making it!

0.43	May 29, 2003
	[ENHANCEMENTS]
	* Now uses request() instead of send_request().  This should
	  solve all of our redirection and cookie bummers.
	* Added reload() method.  Thanks, Corion.

0.42	May 26, 2003
	[ENHANCEMENTS]
	* Renamed _do_request() to send_request(), so it's now a
	  proper overload of LWP::UserAgent.  Thanks to Philippe Bruhat.
	  Recorded in RT ticket #1708.
	* Removed the req() method, and tests that used it.
	* extract_links() now checks for <IFRAME> tags along with the